refactor(ai): bind tool visibility to thread environments